--- a/iotd/.elasticbeanstalk/02_python.config
+++ b/iotd/.elasticbeanstalk/02_python.config
@@ -11,7 +11,7 @@ container_commands:
 option_settings:
   "aws:elasticbeanstalk:application:environment":
     DJANGO_SETTINGS_MODULE: "iotd.settings"
-    "PYTHONPATH": "/opt/python/current/app/iotd:$PYTHONPATH"
+    "PYTHONPATH": "./iotd"
   "aws:elasticbeanstalk:container:python":
     WSGIPath: iotd/iotd/wsgi.py
     NumProcesses: 3
